--- a/portfolio/Barbershop/app/index.html
+++ b/portfolio/Barbershop/app/index.html
@@ -8,16 +8,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="css/libs.css">
+    <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/projects.css">
 </head>
 
 <body>
     <div id="wrapper">
+        <div class="bg_page_home">
+        </div>
+        <div class="bg_page_other">
+        </div>
         <div id="lang_block">
             <a class="active_lang" href="#">RU</a>
             <a href="#">ENG</a>
         </div>
+        <div class="nav-btn">
+                        <a href="#"><span></span></a>
+                    </div>
         <div id="header">
             <div class="container">
                 <div class="header_top">
@@ -29,25 +36,112 @@
                     </div>
                     <div class="right">
                     </div>
-                    <div class="nav-btn">
-                        <a href="#"><span></span></a>
-                    </div>
                 </div>
             </div>
         </div>
         <div id="navigation">
-                    <nav>
-                        <ul>
-                            <li><a href="#">цена успеха</a></li>
-                            <li><a href="#">topgun invest</a></li>
-                            <li><a href="#">допматериалы</a></li>
-                            <li class="lts"><a class="lts" href="#">проекты</a></li>
-                            <li class="lts"><a class="lts" href="#">контакты</a></li>
-                        </ul>
-                    </nav>
-                </div>
+            <nav>
+                <ul>
+                    <li><a href="#">цена успеха</a></li>
+                    <li><a href="#">topgun invest</a></li>
+                    <li><a href="#">допматериалы</a></li>
+                    <li class="lts"><a class="lts" href="#">проекты</a></li>
+                    <li class="lts"><a class="lts" href="#">контакты</a></li>
+                </ul>
+            </nav>
+        </div>
+        <!--Содержимое страницы-->
         <div id="home">
             <div class="container">
+                <div class="tab_content">
+                    <div class="home_page">
+                        <div class="bg_tab">
+                        </div>
+                        <div class="tab_content_block">
+                            <h2>самая крупная <span>и</span> успешная сеть <span>в</span> россии</h2>
+                            <p class="number">250</p>
+                            <p class="bottom">
+                                действующих
+                                <br><span>барбершопов</span>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="moscow_page">
+                        <div class="bg_city">
+                        	<p>москва</p>
+                        </div>
+                        <div class="bg_tab"></div>
+                        <div class="tab_content_block">
+                            <h2><span>до</span>остановки продаж</h2>
+                            <div class="number">
+                                <div class="left">
+                                	 <p><span class="left_item">паушальный взнос</span><span class="numb">2</span><span class="right_item">млн</span><span class="rub"></span></p>
+                                </div>
+                                <div class="center">
+                                    <p class="top">осталось</p>
+                                    <p class="num">10 <span>Франшиз</span></p>
+                                </div>
+                                <div class="right">
+                                	<p><span class="left_item">полное открытие</span><span class="do">до</span><span class="numb">5</span><span class="right_item">млн</span><span class="rub"></span></p>
+                                	<p class="more">*подробности по телефону</p>
+                                	<p class="number">+7 (926) 557 79 97</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="spb_page">
+                        <div class="bg_city">
+                        	<p>санкт-петербург</p>
+                        </div>
+                        <div class="bg_tab"></div>
+                        <div class="tab_content_block">
+                            <h2><span>до</span>остановки продаж</h2>
+                            <div class="number">
+                                <div class="left">
+                                	 <p><span class="left_item">паушальный взнос</span><span class="numb">1,5</span><span class="right_item">млн</span><span class="rub"></span></p>
+                                </div>
+                                <div class="center">
+                                    <p class="top">осталось</p>
+                                    <p class="num">30 <span>Франшиз</span></p>
+                                </div>
+                                <div class="right">
+                                	<p><span class="left_item">полное открытие</span><span class="do">до</span><span class="numb">4,5</span><span class="right_item">млн</span><span class="rub"></span></p>
+                                	<p class="more">*подробности по телефону</p>
+                                	<p class="number">+7 (926) 557 79 97</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="reg_page">
+                        <div class="bg_city">
+                        	<p>регионы</p>
+                        </div>
+                        <div class="bg_tab"></div>
+                        <div class="tab_content_block">
+                            <h2><span>цена</span>успеха</h2>
+                            <div class="number">
+                                <div class="left">
+                                	 <p><span class="left_item">паушальный взнос</span><span class="numb">1</span><span class="right_item">млн</span><span class="rub"></span></p>
+                                </div>
+                                <div class="right">
+                                	<p class="right_top"><span class="left_item">полное открытие</span><span class="do">до</span><span class="numb">3</span><span class="right_item">млн</span><span class="rub"></span></p>
+                                	<p class="more">*подробности по телефону</p>
+                                	<p class="number">+7 (926) 557 79 97</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab_name">
+                    <p class="top">выбрать</p>
+                    <div class="tab_names">
+                        <p class="msc">москва<span></span></p>
+                        <div class="line"></div>
+                        <p class="spb">санкт-петербург<span></span></p>
+                        <div class="line"></div>
+                        <p class="reg">регионы<span></span></p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
