--- a/portfolio/Barbershop/app/index.html
+++ b/portfolio/Barbershop/app/index.html
@@ -44,7 +44,7 @@
                 <ul>
                     <li><a href="#">цена успеха</a></li>
                     <li><a href="#">topgun invest</a></li>
-                    <li><a href="#">допматериалы</a></li>
+                    <li><a href="dopmaterials.html">допматериалы</a></li>
                     <li class="lts"><a class="lts" href="#">проекты</a></li>
                     <li class="lts"><a class="lts" href="#">контакты</a></li>
                 </ul>
