--- a/portfolio/Barbershop/app/index.html
+++ b/portfolio/Barbershop/app/index.html
@@ -42,7 +42,7 @@
         <div id="navigation">
             <nav>
                 <ul>
-                    <li><a href="#">цена успеха</a></li>
+                    <li><a class="cena" href="#">цена успеха</a></li>
                     <li><a href="#">topgun invest</a></li>
                     <li><a href="dopmaterials.html">допматериалы</a></li>
                     <li class="lts"><a class="lts" href="#">проекты</a></li>
