--- a/portfolio/Barbershop/app/dopmaterials.html
+++ b/portfolio/Barbershop/app/dopmaterials.html
@@ -40,7 +40,7 @@
         <div id="navigation">
             <nav>
                 <ul>
-                    <li><a href="#">цена успеха</a></li>
+                    <li><a href="index.html">цена успеха</a></li>
                     <li><a href="#">topgun invest</a></li>
                     <li><a href="#">допматериалы</a></li>
                     <li class="lts"><a class="lts" href="#">проекты</a></li>
