added invest page

--- a/portfolio/Barbershop/app/dopmaterials.html
+++ b/portfolio/Barbershop/app/dopmaterials.html
@@ -41,8 +41,8 @@
             <nav>
                 <ul>
                     <li><a href="index.html">цена успеха</a></li>
-                    <li><a href="#">topgun invest</a></li>
-                    <li><a href="#">допматериалы</a></li>
+                    <li><a href="invest_page.html">topgun invest</a></li>
+                    <li><a href="dopmaterials.html">допматериалы</a></li>
                     <li class="lts"><a class="lts" href="#">проекты</a></li>
                     <li class="lts"><a class="lts" href="#">контакты</a></li>
                 </ul>
