--- a/portfolio/Barbershop/app/index.html
+++ b/portfolio/Barbershop/app/index.html
@@ -43,7 +43,7 @@
             <nav>
                 <ul>
                     <li><a class="cena" href="#">цена успеха</a></li>
-                    <li><a href="#">topgun invest</a></li>
+                    <li><a href="invest_page.html">topgun invest</a></li>
                     <li><a href="dopmaterials.html">допматериалы</a></li>
                     <li class="lts"><a class="lts" href="#">проекты</a></li>
                     <li class="lts"><a class="lts" href="#">контакты</a></li>
