--- a/portfolio/Barbershop/app/dopmaterials.html
+++ b/portfolio/Barbershop/app/dopmaterials.html
@@ -27,7 +27,7 @@
             <div class="container">
                 <div class="header_top">
                     <div class="left">
-                        <p>+7(926)557997</p>
+                        <p>+8(800)2224854</p>
                     </div>
                     <div class="logo">
                         <a href="index.html"></a>
@@ -75,12 +75,12 @@
                             <div class="item_content">
                                 <div class="block">
                                     <a class="top top3" href="#"></a>
-                                    <p>брендбук краткая версия</p>
+                                    <p>презентация краткая версия</p>
                                     <a class="bottom" href="#">Cкачать</a>
                                 </div>
                                 <div class="block">
                                     <a class="top top4" href="#"></a>
-                                    <p>Расписка о возмещении</p>
+                                    <p>Видео о возмещении</p>
                                     <a class="bottom" href="#">Cкачать</a>
                                 </div>
                             </div>
@@ -96,13 +96,13 @@
                             </div>
                             <div class="block">
                                 <a class="top top2" href="#"></a>
-                                <p>Бунтарь против правил<span>Выступление на форуме</span>«Герои Российского Бизнеса» 2017
+                                <p>Бунтарь против правил<span> Выступление на форуме </span>«Герои Российского Бизнеса» 2017
                                 </p>
                                 <a class="bottom" href="#">Cмотреть</a>
                             </div>
                             <div class="block">
                                 <a class="top top3" href="#"></a>
-                                <p><span>Большое интервью</span>Большое интервью<span>об истории и развитии</span>об истории и развитии</p>
+                                <p>Большое интервью<br> c <span>Алексеем Локонцевым </span><span>об истории и развитии</span>об истории и развитии</p>
                                 <a class="bottom" href="#">Cмотреть</a>
                             </div>
                             <div class="block">
@@ -112,12 +112,12 @@
                             </div>
                             <div class="block">
                                 <a class="top top5" href="#"></a>
-                                <p><span>Интервью  для канала</span>"Бюрократ" — о бизнесе, долгах, Тинькове, Трансформации и Бизнес Молодости</p>
+                                <p><span>Интервью  для канала </span>"Бюрократ" — о бизнесе, долгах, Тинькове, Трансформации и Бизнес Молодости</p>
                                 <a class="bottom" href="#">Cмотреть</a>
                             </div>
                             <div class="block">
                                 <a class="top top6" href="#"></a>
-                                <p>Бунтарь против правил<span>Выступление на форуме </span>«Герои Российского Бизнеса» 2017
+                                <p>Бунтарь против правил <span>Выступление на форуме </span>«Герои Российского Бизнеса» 2017
                                 </p>
                                 <a class="bottom" href="#">Cмотреть</a>
                             </div>
