--- a/portfolio/Barbershop/app/dopmaterials.html
+++ b/portfolio/Barbershop/app/dopmaterials.html
@@ -42,9 +42,9 @@
                 <ul>
                     <li><a href="index.html">цена успеха</a></li>
                     <li><a href="invest_page.html">topgun invest</a></li>
-                    <li><a href="dopmaterials.html">допматериалы</a></li>
+                    <li><a class="current" href="dopmaterials.html">допматериалы</a></li>
                     <li class="lts"><a class="lts" href="#">проекты</a></li>
-                    <li class="lts"><a class="lts" href="#">контакты</a></li>
+                    <li class="lts contacts"><a class="lts" href="#">контакты</a></li>
                 </ul>
             </nav>
         </div>
@@ -125,8 +125,31 @@
                     </div>
                     <div class="bottom_section">
                         <p class="top"><span class="span1">Остались </span><span class="span2">вопросы? </span><span class="span3">Звоните</span></p>
-                        <p class="bottom">+7(926)5577997</p>
+                        <p class="bottom">+8(800)2224854</p>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div id="contacts_tab">
+            <div class="bg_portret"></div>
+            <div class="bg_all"></div>
+            <div class="bg_tab">
+                <div class="container">
+                    <div class="bg"></div>
+                </div>
+            </div>
+            <div class="container">
+                <p class="top">уточнить детали</p>
+                <p class="bottom">у основателя бренда</p>
+                <h2>Алексея локонцева</h2>
+                <p class="number">+8 (800) 222 48 54</p>
+                <div class="bottom_block">
+                    <p class="first">loko@topgunbarbershop.ru</p>
+                    <p class="second">с <span>9</span> до <span>19</span> UTC+<span>03:00</span></p>
+                </div>
+                <div class="footer">
+                    <p>ООО "ТОПГАН", 115114, г.Москва, Павелецкая наб. 2 стр.1, офис 135</p>
+                    <p>ИНН 7842107759, КПП 784201001, ОГРНИП 1167847215733</p>
                 </div>
             </div>
         </div>
