--- a/portfolio/Barbershop/app/index.html
+++ b/portfolio/Barbershop/app/index.html
@@ -23,8 +23,8 @@
             <a href="#">ENG</a>
         </div>
         <div class="nav-btn">
-                        <a href="#"><span></span></a>
-                    </div>
+            <a href="#"><span></span></a>
+        </div>
         <div id="header">
             <div class="container">
                 <div class="header_top">
@@ -46,7 +46,7 @@
                     <li><a href="invest_page.html">topgun invest</a></li>
                     <li><a href="dopmaterials.html">допматериалы</a></li>
                     <li class="lts"><a class="lts" href="#">проекты</a></li>
-                    <li class="lts"><a class="lts" href="#">контакты</a></li>
+                    <li class="lts contacts"><a class="lts" href="#">контакты</a></li>
                 </ul>
             </nav>
         </div>
@@ -68,65 +68,65 @@
                     </div>
                     <div class="moscow_page">
                         <div class="bg_city">
-                        	<p>москва</p>
+                            <p>москва</p>
                         </div>
                         <div class="bg_tab"></div>
                         <div class="tab_content_block">
                             <h2><span>до </span>остановки продаж</h2>
                             <div class="number">
                                 <div class="left">
-                                	 <p><span class="left_item">паушальный взнос </span><span class="numb">2</span><span class="right_item">млн</span><span class="rub"></span></p>
+                                    <p><span class="left_item">паушальный взнос </span><span class="numb">2</span><span class="right_item">млн</span><span class="rub"></span></p>
                                 </div>
                                 <div class="center">
                                     <p class="top">осталось</p>
                                     <p class="num">10 <span>Франшиз</span></p>
                                 </div>
                                 <div class="right">
-                                	<p><span class="left_item">полное открытие</span><span class="do">до </span><span class="numb">5</span><span class="right_item">млн</span><span class="rub"></span></p>
-                                	<p class="more">*подробности по телефону</p>
-                                	<p class="number">+7 (926) 557 79 97</p>
+                                    <p><span class="left_item">полное открытие</span><span class="do">до </span><span class="numb">5</span><span class="right_item">млн</span><span class="rub"></span></p>
+                                    <p class="more">*подробности по телефону</p>
+                                    <p class="number">+8 (800) 222 48 54</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="spb_page">
                         <div class="bg_city">
-                        	<p>санкт-петербург</p>
+                            <p>санкт-петербург</p>
                         </div>
                         <div class="bg_tab"></div>
                         <div class="tab_content_block">
                             <h2><span>до </span>остановки продаж</h2>
                             <div class="number">
                                 <div class="left">
-                                	 <p><span class="left_item">паушальный взнос</span><span class="numb">1,5</span><span class="right_item">млн</span><span class="rub"></span></p>
+                                    <p><span class="left_item">паушальный взнос</span><span class="numb">1,5</span><span class="right_item">млн</span><span class="rub"></span></p>
                                 </div>
                                 <div class="center">
                                     <p class="top">осталось</p>
                                     <p class="num">30 <span>Франшиз</span></p>
                                 </div>
                                 <div class="right">
-                                	<p><span class="left_item">полное открытие</span><span class="do">до </span><span class="numb">4,5</span><span class="right_item">млн</span><span class="rub"></span></p>
-                                	<p class="more">*подробности по телефону</p>
-                                	<p class="number">+7 (926) 557 79 97</p>
+                                    <p><span class="left_item">полное открытие</span><span class="do">до </span><span class="numb">4,5</span><span class="right_item">млн</span><span class="rub"></span></p>
+                                    <p class="more">*подробности по телефону</p>
+                                    <p class="number">+8 (800) 222 48 54</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="reg_page">
                         <div class="bg_city">
-                        	<p>регионы</p>
+                            <p>регионы</p>
                         </div>
                         <div class="bg_tab"></div>
                         <div class="tab_content_block">
                             <h2><span>цена</span>успеха</h2>
                             <div class="number">
                                 <div class="left">
-                                	 <p><span class="left_item">паушальный взнос</span><span class="numb">1</span><span class="right_item">млн</span><span class="rub"></span></p>
+                                    <p><span class="left_item">паушальный взнос</span><span class="numb">1</span><span class="right_item">млн</span><span class="rub"></span></p>
                                 </div>
                                 <div class="right">
-                                	<p class="right_top"><span class="left_item">полное открытие</span><span class="do">до </span><span class="numb">3</span><span class="right_item">млн</span><span class="rub"></span></p>
-                                	<p class="more">*подробности по телефону</p>
-                                	<p class="number">+7 (926) 557 79 97</p>
+                                    <p class="right_top"><span class="left_item">полное открытие</span><span class="do">до </span><span class="numb">3</span><span class="right_item">млн</span><span class="rub"></span></p>
+                                    <p class="more">*подробности по телефону</p>
+                                    <p class="number">+8 (800) 222 48 54</p>
                                 </div>
                             </div>
                         </div>
@@ -144,7 +144,29 @@
                 </div>
             </div>
         </div>
-        
+        <div id="contacts_tab">
+            <div class="bg_portret"></div>
+            <div class="bg_all"></div>
+            <div class="bg_tab">
+                <div class="container">
+                    <div class="bg"></div>
+                </div>
+            </div>
+            <div class="container">
+                <p class="top">уточнить детали</p>
+                <p class="bottom">у основателя бренда</p>
+                <h2>Алексея локонцева</h2>
+                <p class="number">+8 (800) 222 48 54</p>
+                <div class="bottom_block">
+                    <p class="first">loko@topgunbarbershop.ru</p>
+                    <p class="second">с <span>9</span> до <span>19</span> UTC+<span>03:00</span></p>
+                </div>
+                <div class="footer">
+                    <p>ООО "ТОПГАН", 115114, г.Москва, Павелецкая наб. 2 стр.1, офис 135</p>
+                    <p>ИНН 7842107759, КПП 784201001, ОГРНИП 1167847215733</p>
+                </div>
+            </div>
+        </div>
     </div>
     <!--Sripts-->
     <script src="libs/jquery/dist/jquery.min.js"></script>
