--- a/portfolio/Barbershop/app/index.html
+++ b/portfolio/Barbershop/app/index.html
@@ -30,7 +30,7 @@
             <div class="container">
                 <div class="header_top">
                     <div class="left">
-                        <p>+8(800)2224854</p>
+                        <p>8(800)2224854</p>
                     </div>
                     <div class="logo">
                         <a href="#"></a>
@@ -85,7 +85,7 @@
                                 <div class="right">
                                     <p><span class="left_item">полное открытие</span><span class="do">до </span><span class="numb">5</span><span class="right_item">млн</span><span class="rub"></span></p>
                                     <p class="more">*подробности по телефону</p>
-                                    <p class="number">+8 (800) 222 48 54</p>
+                                    <p class="number">8 (800) 222 48 54</p>
                                 </div>
                             </div>
                         </div>
@@ -108,7 +108,7 @@
                                 <div class="right">
                                     <p><span class="left_item">полное открытие</span><span class="do">до </span><span class="numb">4,5</span><span class="right_item">млн</span><span class="rub"></span></p>
                                     <p class="more">*подробности по телефону</p>
-                                    <p class="number">+8 (800) 222 48 54</p>
+                                    <p class="number">8 (800) 222 48 54</p>
                                 </div>
                             </div>
                         </div>
@@ -127,7 +127,7 @@
                                 <div class="right">
                                     <p class="right_top"><span class="left_item">полное открытие</span><span class="do">до </span><span class="numb">3</span><span class="right_item">млн</span><span class="rub"></span></p>
                                     <p class="more">*подробности по телефону</p>
-                                    <p class="number">+8 (800) 222 48 54</p>
+                                    <p class="number">8 (800) 222 48 54</p>
                                 </div>
                             </div>
                         </div>
