--- a/portfolio/Barbershop/app/invest_page.html
+++ b/portfolio/Barbershop/app/invest_page.html
@@ -28,7 +28,7 @@
             <div class="container">
                 <div class="header_top">
                     <div class="left">
-                        <p>+8(800)2224854</p>
+                        <p>8(800)2224854</p>
                     </div>
                     <div class="logo">
                         <a href="index.html"></a>
@@ -88,13 +88,13 @@
                             <div class="top_item">
                                 <p>
                                     <span class="first">выгоднее,</span><br>
-                                    <span class="second">чем</span>покупка и сдача<br>
+                                    <span class="second">чем </span>покупка и сдача<br>
                                     в аренду недвижимости
                                 </p>
                             </div>
                             <div class="bottom_item">
                                 <p class="more">*подробности по телефону</p>
-                                <p class="number">+8 (800) 222 48 54</p>
+                                <p class="number">8 (800) 222 48 54</p>
                             </div>
                         </div>
                     </div>
@@ -113,7 +113,7 @@
                 <p class="top">уточнить детали</p>
                 <p class="bottom">у основателя бренда</p>
                 <h2>Алексея локонцева</h2>
-                <p class="number">+8 (800) 222 48 54</p>
+                <p class="number">8 (800) 222 48 54</p>
                 <div class="bottom_block">
                     <p class="first">loko@topgunbarbershop.ru</p>
                     <p class="second">с <span>9</span> до <span>19</span> UTC+<span>03:00</span></p>
