--- a/portfolio/Barbershop/app/index.html
+++ b/portfolio/Barbershop/app/index.html
@@ -46,7 +46,7 @@
                     <li><a class="cena" href="#">цена успеха</a></li>
                     <li><a href="invest_page.html">topgun invest</a></li>
                     <li><a href="dopmaterials.html">допматериалы</a></li>
-                    <li class="lts"><a class="lts" href="#">проекты</a></li>
+                    <li class="lts"><a class="lts" href="projects.html">проекты</a></li>
                     <li class="lts contacts"><a class="lts" href="#">контакты</a></li>
                 </ul>
             </nav>
