--- a/portfolio/Barbershop/app/invest_page.html
+++ b/portfolio/Barbershop/app/invest_page.html
@@ -31,7 +31,11 @@
                         <p>8(800)2224854</p>
                     </div>
                     <div class="logo">
-                        <a href="index.html"></a>
+                        <a href="index.html">
+                            <span class="left_b">
+                                
+                            </span>
+                        </a>
                     </div>
                     <div class="right">
                     </div>
@@ -44,7 +48,7 @@
                     <li><a href="index.html">цена успеха</a></li>
                     <li><a class="current" href="invest_page.html">topgun invest</a></li>
                     <li><a href="dopmaterials.html">допматериалы</a></li>
-                    <li class="lts"><a class="lts" href="#">проекты</a></li>
+                    <li class="lts"><a class="lts" href="projects.html">проекты</a></li>
                     <li class="lts contacts"><a class="lts" href="#">контакты</a></li>
                 </ul>
             </nav>
