--- a/portfolio/Barbershop/app/dopmaterials.html
+++ b/portfolio/Barbershop/app/dopmaterials.html
@@ -31,7 +31,8 @@
                         <p>8(800)2224854</p>
                     </div>
                     <div class="logo">
-                        <a href="index.html"></a>
+                        <a href="index.html">
+                        </a>
                     </div>
                     <div class="right">
                     </div>
@@ -44,7 +45,7 @@
                     <li><a href="index.html">цена успеха</a></li>
                     <li><a href="invest_page.html">topgun invest</a></li>
                     <li><a class="current" href="dopmaterials.html">допматериалы</a></li>
-                    <li class="lts"><a class="lts" href="#">проекты</a></li>
+                    <li class="lts"><a class="lts" href="projects.html">проекты</a></li>
                     <li class="lts contacts"><a class="lts" href="#">контакты</a></li>
                 </ul>
             </nav>
