--- a/portfolio/Barbershop/app/projects.html
+++ b/portfolio/Barbershop/app/projects.html
@@ -58,7 +58,75 @@
                     <div class="page_content">
                         <div class="center_block">
                             <div class="img">
-                                <div class="img_box"><img src="img/projects_logo.svg" alt="logo"></div>
+                                <div class="images">
+                                    <div class="img_box first_logo">
+                                        <img src="img/projects_logo.svg" alt="logo">
+                                    </div>
+                                    <div class="img_box">
+                                        <img src="img/project2.svg" alt="logo">
+                                        <div class="shadow"></div>
+                                    </div>
+                                    <div class="img_box">
+                                        <img src="img/project3.svg" alt="logo">
+                                        <div class="shadow"></div>
+                                    </div>
+                                    <div class="img_box">
+                                        <img src="img/project4.png" alt="logo">
+                                        <div class="shadow"></div>
+                                    </div>
+                                    <div class="img_box">
+                                        <img src="img/project5.png" alt="logo">
+                                        <div class="shadow"></div>
+                                    </div>
+                                    <div class="img_box">
+                                        <img src="img/project6.svg" alt="logo">
+                                        <div class="shadow"></div>
+                                    </div>
+                                    <div class="img_box">
+                                        <img src="img/project1.svg" alt="logo">
+                                        <div class="shadow"></div>
+                                    </div>
+                                    <div class="img_box">
+                                        <img src="img/project8.svg" alt="logo">
+                                        <div class="shadow"></div>
+                                    </div>
+                                    <div class="img_box">
+                                        <img src="img/project9.svg" alt="logo">
+                                        <div class="shadow"></div>
+                                    </div>
+                                    <div class="img_box">
+                                        <img src="img/project10.svg" alt="logo">
+                                        <div class="shadow"></div>
+                                    </div>
+                                    <div class="img_box">
+                                        <img src="img/project11.svg" alt="logo">
+                                        <div class="shadow"></div>
+                                    </div>
+                                    <div class="img_box">
+                                        <img src="img/project12.svg" alt="logo">
+                                        <div class="shadow"></div>
+                                    </div>
+                                    <div class="img_box">
+                                        <img src="img/project13.svg" alt="logo">
+                                        <div class="shadow"></div>
+                                    </div>
+                                    <div class="img_box">
+                                        <img src="img/project14.svg" alt="logo">
+                                        <div class="shadow"></div>
+                                    </div>
+                                    <div class="img_box">
+                                        <img src="img/project15.svg" alt="logo">
+                                        <div class="shadow"></div>
+                                    </div>
+                                    <div class="img_box">
+                                        <img src="img/project16.png" alt="logo">
+                                        <div class="shadow"></div>
+                                    </div>
+                                    <div class="img_box">
+                                        <img src="img/project17.png" alt="logo">
+                                        <div class="shadow"></div>
+                                    </div>
+                                </div>
                                 <div class="txt">
                                     <p class="first">ООО "ТОПГАН", 115114, г.Москва, Павелецкая наб. 2 стр.1, офис 135</p>
                                     <p class="second">ИНН 7842107759, КПП 784201001, ОГРНИП 1167847215733</p>
@@ -67,9 +135,9 @@
                         </div>
                         <div class="bottom_projects">
                             <div class="projects_content">
-                                <div class="block">
-                                    <img src="img/project1.svg" alt="">
-                                    <p>магазин мужской косметики</p>
+                                <div class="block active">
+                                    <img src="img/project7.png" alt="">
+                                    <p>сеть тату-салонов</p>
                                 </div>
                                 <div class="block">
                                     <img src="img/project2.svg" alt="">
@@ -81,7 +149,8 @@
                                 </div>
                                 <div class="block">
                                     <img src="img/project4.png" alt="">
-                                    <p>первое и единственное<br>barbershow в россии</p>
+                                    <p>первое и единственное
+                                        <br>barbershow в россии</p>
                                 </div>
                                 <div class="block">
                                     <img src="img/project5.png" alt="">
@@ -91,9 +160,9 @@
                                     <img src="img/project6.svg" alt="">
                                     <p>визуальный мониторинг</p>
                                 </div>
-                                <div class="block active">
-                                    <img src="img/project7.png" alt="">
-                                    <p>сеть тату-салонов</p>
+                                <div class="block">
+                                    <img src="img/project1.svg" alt="">
+                                    <p>магазин мужской косметики</p>
                                 </div>
                                 <div class="block">
                                     <img src="img/project8.svg" alt="">
@@ -138,9 +207,9 @@
                             </div>
                         </div>
                         <div class="footer">
-                                    <p>ООО "ТОПГАН", 115114, г.Москва, Павелецкая наб. 2 стр.1, офис 135</p>
-                                    <p>ИНН 7842107759, КПП 784201001, ОГРНИП 1167847215733</p>
-                                </div>
+                            <p>ООО "ТОПГАН", 115114, г.Москва, Павелецкая наб. 2 стр.1, офис 135</p>
+                            <p>ИНН 7842107759, КПП 784201001, ОГРНИП 1167847215733</p>
+                        </div>
                     </div>
                 </div>
             </div>
