--- a/portfolio/CSA/app/index.html
+++ b/portfolio/CSA/app/index.html
@@ -9,7 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="css/libs.css">
     <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/start.css">
+    <link rel="stylesheet" href="css/home.css">
 </head>
 
 <body>
@@ -48,7 +49,7 @@
         <div id="header_top">
             <div class="container">
                 <div class="header_top">
-                    <div class="logo"><a href="index.html"><img src="img/logo_header.svg" alt="logo_head"></a></div>
+                    <div class="logo"><a href="index.html"></a></div>
                     <div class="lang">
                         <a href="#" class="active_lang">ru</a>
                         <p>l</p>
@@ -74,27 +75,28 @@
                                 <span>/</span>
                                 <span>/</span>
                             </div>
-                            <div class="link link_trigger">
+                            <div class="link link_trigger icon">
                                 <a href="#"></a>
                                 <div class="bg"></div>
                             </div>
                         </div>
                         <div class="icons_block">
-                            <div class="link1 link_trigger">
+                            <div class="link1 link_trigger icon">
                                 <a href="#"></a>
                                 <div class="bg"></div>
                             </div>
-                            <div class="link2 link_trigger">
+                            <div class="link2 link_trigger icon">
                                 <a href="#"></a>
                                 <div class="bg"></div>
                             </div>
-                            <div class="link3 link_trigger">
+                            <div class="link3 link_trigger icon">
                                 <a href="#"></a>
                                 <div class="bg"></div>
                             </div>
                         </div>
-                        <div class="fr_link link_trigger_fr">
+                        <div class="fr_link link_trigger link_trigger_fr">
                             <a href="#">ФРАНШИЗА</a>
+                            <div class="bg_static"></div>
                             <div class="bg"></div>
                         </div>
                     </div>
@@ -121,7 +123,7 @@
             </div>
         </div>
         <!--Страницы------------------------------------------------------------------>
-        <div id="home_page">
+        <div id="start_page">
             <div class="container">
                 <div class="block_logo">
                     <div class="logo_content">
@@ -131,6 +133,11 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div id="home_page">
+            <div class="container">
+                
             </div>
         </div>
     </div>
