--- a/portfolio/CSA/app/index.html
+++ b/portfolio/CSA/app/index.html
@@ -28,19 +28,19 @@
                 <li class="link_trigger"><a href="#">УСЛУГИ</a>
                 </li>
                 <div class="icons_block">
-                            <div class="link1 link_trigger">
-                                <a href="#"></a>
-                                <div class="bg"></div>
-                            </div>
-                            <div class="link2 link_trigger">
-                                <a href="#"></a>
-                                <div class="bg"></div>
-                            </div>
-                            <div class="link3 link_trigger">
-                                <a href="#"></a>
-                                <div class="bg"></div>
-                            </div>
-                        </div>
+                    <div class="link1 link_trigger">
+                        <a href="#"></a>
+                        <div class="bg"></div>
+                    </div>
+                    <div class="link2 link_trigger">
+                        <a href="#"></a>
+                        <div class="bg"></div>
+                    </div>
+                    <div class="link3 link_trigger">
+                        <a href="#"></a>
+                        <div class="bg"></div>
+                    </div>
+                </div>
             </ul>
         </div>
         <div class="nav-btn">
@@ -137,12 +137,37 @@
         </div>
         <div id="home_page">
             <div class="container">
-                
+                <div class="content">
+                    <div class="slider1">
+                        <div class="slide">
+                            <p>слайд1</p>
+                        </div>
+                        <div class="slide slide_logo">
+                            <div class="img"></div>
+                        </div>
+                        <div class="slide">
+                            <p>слайд3</p>
+                        </div>
+                        <div class="slide">
+                            <p>слайд4</p>
+                        </div>
+                        <div class="slide">
+                            <p>слайд5</p>
+                        </div>
+                        <div class="slide">
+                            <p>слайд6</p>
+                        </div>
+                        <div class="slide">
+                            <p>слайд7</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
     <!--Sripts-->
     <script src="libs/jquery/dist/jquery.min.js"></script>
+    <script src="libs/slick-1.8.1/slick/slick.min.js"></script>
     <script src="js/common.js"></script>
 </body>
 
